# databend-playground

./: .licenserc.yaml  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: databend-playground-release.yml
src/: App.tsx  error.rs  main.rs
src/handlers/: asset.rs  mod.rs  proxy.rs  query.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  api.tsx  index.css  main.scss  main.tsx  vite-env.d.ts
ui/src/apis/: api.tsx  sql.ts
ui/src/assets/scss/: _mixins.scss  icon.ts
ui/src/assets/svg/: copy.tsx  database.tsx  edit.tsx  execute.tsx  noData.tsx  query.tsx  refresh.tsx  result.tsx  sorry.tsx  sql.tsx  storage.tsx  table.tsx  test.tsx  time.tsx
ui/src/components/Layout/: index.tsx
ui/src/components/Layout/Content/: index.tsx
ui/src/components/Layout/Header/: index.tsx
ui/src/components/Loading/: SpinLoading.tsx  index.tsx  styles.module.scss
ui/src/components/NoData/: index.tsx
ui/src/components/Progress/: index.tsx  styles.module.scss
ui/src/components/Scale/: index.tsx
ui/src/components/VitualTable/: index.tsx
ui/src/hooks/: useMousePosition.ts
ui/src/pages/IDE/: css_index.module.scss  css_navigator.module.scss  css_query.module.scss  index-backup.tsx  index.tsx  navigator.tsx  query.tsx  utils.ts
ui/src/pages/Login/: index.tsx
ui/src/pages/NotFound/: index.tsx
ui/src/pages/Test/: index.tsx
ui/src/router/: index.tsx
ui/src/service/: index.ts  types.ts
ui/src/types/: sql.ts
ui/src/utils/: math.ts  tools.ts
(+3 files in other folders)
