[package]
name = "databend-playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.8"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
include_dir = "0.6.2"
tracing = "0.1.29"
reqwest = { version = "0.11", features = ["json"] }